projects/go-http-server-kubernetes/deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-version
  name: kube-version
  namespace: kube-version
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kube-version
